# SpectralDB

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
data/CIE/: README.md
data/demo/: argon_demo.csv
data/raw/: README.md  README.md.txt
data/raw/lines/wavelength/: Ac.csv  Ag.csv  Al.csv  Am.csv  Ar.csv  As.csv  At.csv  Au.csv  B.csv  Ba.csv  Be.csv  Bh.csv  Bi.csv  Bk.csv  Br.csv  C.csv  Ca.csv  Cd.csv  Ce.csv  Cf.csv  Cl.csv  Cm.csv  Cn.csv  Co.csv  Cr.csv  Cs.csv  Cu.csv  Db.csv  Ds.csv  Dy.csv  Er.csv  Es.csv  Eu.csv  F.csv  Fm.csv  Fr.csv  Ga.csv  Gd.csv  Ge.csv  H.csv  (+69 more)
notebooks/: README.md  db.ipynb  model.ipynb  setup.py  viz.ipynb
spectraldb/: colorspaces.py  periodic_table.py  spectraldensity.py
spectraldb/models/: wss.py
spectraldb/sql/: create_table_spectra.sql
spectraldb/utils/: defaults.py  io.py  misc.py  preprocess.py  types.py
src/: db.ipynb  defaults.py  preprocess.py
src/models/: wss.py
src/utils/: defaults.py  io.py  preprocess.py  types.py
tests/: test_io.py  test_preprocess.py  test_test.py  test_wss.py
