[project]
name = "spectraldb"
version = "0.1.0"
description = "Spectral Lines and Information"
authors = [
    {name = "Austin Marckx"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
