[project]
name = "spectraldb"
version = "0.1.0"
description = "Spectral Lines and Information"
authors = [
    {name = "Austin Marckx"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "green (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"


[project.urls]
Homepage = "https://github.com/austinmarckx/spectraldb"
